feat: add infinite scroll of character on Home Page

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="h-dvh py-6 bg-hero bg-repeat bg-cover backdrop-blur-md">
+<body class="h-full py-6 bg-hero bg-cover bg-fixed backdrop-blur-sm">
   <main class="max-w-[1440px] mx-auto">
     <app-root></app-root>
   </main>
