--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>RickMortyRest</title>
@@ -7,9 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="h-full py-6 bg-hero bg-cover bg-fixed backdrop-blur-sm">
+
+<body class="h-full py-6 bg-fixed bg-gradient-to-b from-[#0250c5] to-[#d43f8d]">
   <main class="max-w-[1440px] mx-auto">
     <app-root></app-root>
   </main>
 </body>
+
 </html>
