--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="h-full py-6 bg-fixed bg-gradient-to-b from-[#0250c5] to-[#d43f8d]">
-  <main class="max-w-[1440px] mx-auto">
+<!-- <body class="h-full py-6 bg-fixed bg-gradient-to-b from-[#0250c5] to-[#d43f8d]"> -->
+<body class="h-full py-6 bg-neutral">
+  <main class="max-w-[1440px] mx-auto px-2 sm:px-0">
     <app-root></app-root>
   </main>
 </body>
